--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,14 +10,29 @@ body {
   font-family: var(--heading-font-family);
 }
 
-h1 {
-  font-size: 88px;
-}
-
 h1, h2, h4, h5, h6, p {
   color: black;
   font-family: var(--heading-font-family);
   font-weight: bold;
+}
+
+h1 {
+  font-size: 88px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+.header-apps {
+  font-size: 36px;
+}
+
+p {
+  font-family: var(--secondary-font-family);
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 32px;
 }
 
 h3 {
@@ -35,11 +50,20 @@ h3 {
     font-size: 34px;
 }
 
-.btn-contact {
+.btn-contact-launch {
   background: var(--contact-color);
   border-radius: 4px;
   color: white;
   font-size: 18px;
   line-height: 27px;
   padding: 12px 20px;
+}
+
+.btn-app-launch {
+  color: var(--contact-color);
+  border: 1px solid var(--contact-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
