--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -81,6 +81,23 @@ h3 {
   border-top: none;
 }
 
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 24px;
+}
+
+.profile-picture {
+  border-radius: 20px;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 30px;
@@ -111,6 +128,31 @@ h3 {
   .project-header {
     margin: 10px 12px;
     font-size: 18px;
+  }
+
+  .about-section {
+    padding: 40px 15px;
+    text-align: center;
+  }
+
+  .about-section h1 {
+    font-size: 36px;
+    line-height: 50px;
+  }
+
+  .about-section h2 {
+    font-size: 13px;
+    font-weight: 550;
+  }
+
+  .about-section p {
+    font-size: 14px;
+    line-height: 1.3;
+    font-weight: 500;
+  }
+
+  .profile-picture {
+    margin-top: 10px;
   }
 
 }
