--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -50,7 +50,7 @@ h3 {
     font-size: 34px;
 }
 
-.btn-contact-launch {
+.btn-main {
   background: var(--contact-color);
   border-radius: 4px;
   color: white;
@@ -81,16 +81,16 @@ h3 {
   border-top: none;
 }
 
-.about-section {
+.content-section {
   padding: 160px 20px;
 }
 
-.about-section h1 {
+.content-section h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content-section h2 {
   font-size: 24px;
 }
 
@@ -120,7 +120,7 @@ h3 {
     padding: 10px 10px;
   }
 
-  .btn-contact-launch {
+  .btn-main {
     font-size: 12px;
     padding: 12px;
   }
@@ -130,22 +130,22 @@ h3 {
     font-size: 18px;
   }
 
-  .about-section {
+  .content-section {
     padding: 40px 15px;
     text-align: center;
   }
 
-  .about-section h1 {
+  .content-section h1 {
     font-size: 36px;
     line-height: 50px;
   }
 
-  .about-section h2 {
+  .content-section h2 {
     font-size: 13px;
     font-weight: 550;
   }
 
-  .about-section p {
+  .content-section p {
     font-size: 14px;
     line-height: 1.3;
     font-weight: 500;
