--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -70,7 +70,7 @@ h3 {
 }
 
 .app-grid {
-  padding: 20px 160px;
+  padding: 20px 50px;
   margin: 30px;
 }
 
@@ -109,19 +109,21 @@ nav {
   padding: 20px 0;
 }
 
-nav li {
+nav li, .header-list {
   display: inline;
   list-style: none;
   font-family: var(--heading-font-family);
   font-size: 30px;
   margin-left: 10px;
-  line-height: 44px;
+  line-height: 40px;
+  padding: 20px 10px;
 }
 
 nav a, h2 {
   text-decoration: none;
   color: rgb(51, 49, 49);
   transition: all 100ms ease-in-out;
+  padding: 20px;
 }
 
 nav a:hover, nav li.active a {
