--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -144,6 +144,42 @@ nav ul {
   padding: 0;
 }
 
+footer {
+  margin: 60px 0px;
+}
+
+footer .contact-box {
+  background-color: var(--hero-background-color);
+  padding: 60px 120px;
+  margin: 30px 300px;
+  border-radius: 10px;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 28px;
+}
+
+footer .email-link:hover {
+  color: var(--contact-color-dark);
+}
+
+footer .contact-links a {
+  color: var(--contact-color-dark);
+  font-size: 18px;
+  margin: 0px 20px;
+  padding: 10px 14px;
+  border-radius: 50%;
+  background-color: var(--hero-background-color);
+  transition: all 150ms ease-in-out;
+}
+
+footer .contact-links a:hover {
+  color: white;
+  background: var(--contact-color-dark);
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 30px;
