--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,7 +28,7 @@ h2 {
 .project-header {
   font-family: var(--heading-font-family);
   margin: 60px 30px 30px 30px;
-  padding: 60px 0px;
+  padding: 40px 0px;
   font-size: 42px;
 }
 
@@ -47,7 +47,7 @@ h3 {
 .hero {
   background: var(--hero-background-color);
   text-align: center;
-  padding: 200px 30px;
+  padding: 150px 30px;
 }
 
 .hero p {
@@ -117,7 +117,7 @@ nav {
   padding: 20px 0;
 }
 
-nav li, .header-list {
+nav li, .header-content {
   display: inline;
   list-style: none;
   font-family: var(--heading-font-family);
@@ -127,11 +127,12 @@ nav li, .header-list {
   padding: 20px 10px;
 }
 
-nav a, h2 {
+nav a, h2, p {
   text-decoration: none;
   color: rgb(51, 49, 49);
   transition: all 100ms ease-in-out;
-  padding: 20px;
+  padding: 0px;
+  margin: 0px;
 }
 
 nav a:hover, nav li.active a {
@@ -150,9 +151,16 @@ footer {
 
 footer .contact-box {
   background-color: var(--hero-background-color);
-  padding: 60px 120px;
-  margin: 30px 300px;
+  padding: 20px 100px;
+  margin: 30px 250px;
   border-radius: 10px;
+  text-align: center;
+}
+
+footer .contact-content {
+  display: flex;
+  align-items: center;
+  padding: 40px;
 }
 
 footer .email-link {
@@ -187,6 +195,10 @@ footer .contact-links a:hover {
 
   .hero p {
     font-size: 22px;
+  }
+
+  .header-content {
+    font-size: 18px;
   }
 
   h3 {
@@ -254,7 +266,7 @@ footer .contact-links a:hover {
     padding: 0px;
   }
 
-  nav h2, li, a {
+  nav li, a {
     font-size: 18px;
     line-height: 20px;
   }
