--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -50,8 +50,6 @@ p {
   line-height: 32px;
 }
 
-
-
 .hero {
   background: var(--hero-background-color);
   text-align: center;
@@ -107,7 +105,7 @@ p {
 }
 
 .content-section {
-  padding: 140px 20px;
+  padding: 60px 20px;
 }
 
 .content-section h1 {
@@ -154,6 +152,50 @@ nav a, h2, p {
 nav a:hover, nav li.active a {
   color: var(--contact-color-dark);
   font-weight: 500;
+}
+
+.sheCodes-logo {
+  width: 40px;
+  margin: 10px;
+  margin-left: 40px;
+}
+
+.email-icon {
+  color: black;
+  margin: 10px;
+  font-size: 30px;
+  margin-left: 40px;
+
+}
+
+.linkedIn-icon {
+  color: #0a66c2;
+  margin: 10px;
+  font-size: 30px;
+  margin-left: 40px;
+}
+
+.gitHub-icon {
+  color: #9447b8;
+  margin: 10px;
+  font-size: 30px;
+  margin-left: 40px;
+}
+
+.contact-list {
+  text-decoration: none;
+  color: black;
+  opacity: .8;
+  transition: all 100ms ease-in-out;
+}
+
+.contact-list:hover, .sheCodes-logo:hover {
+  color: var(--contact-color-dark);
+}
+
+.contact-links {
+  text-align: left;
+  padding-left: 40px;
 }
 
 nav ul {
@@ -214,6 +256,9 @@ footer .contact-links a:hover {
 }
 
 @media (max-width: 1200px) {
+  .content-section h1 {
+    font-size: 40px;
+  }
   footer .contact-box {
     padding: 0px;
     margin: 20px 100px;
@@ -275,8 +320,8 @@ footer .contact-links a:hover {
   }
 
   .content-section h1 {
-    font-size: 36px;
-    line-height: 50px;
+    font-size: 30px;
+    line-height: 40px;
   }
 
   .content-section h2 {
@@ -292,6 +337,11 @@ footer .contact-links a:hover {
 
   .profile-picture {
     margin-top: 10px;
+  }
+
+  .contact-links {
+    text-align: justify;
+    padding-left: 40px;
   }
 
   nav {
